minimap: Fix scrollbar handle not being drawn with scrollmarks off.

Also draw scrollmarks on top of the shading to make them more visible

BUG: 352641